kuberentes/ingress.yml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: cloudnativecasts
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
  - hosts:
    - cloudnativecasts.com
    secretName: cloudnativecasts-tls
  rules:
  - host: cloudnativecasts.com
    http:
      paths:
      - backend:
          serviceName: cloudnativecasts
          servicePort: http
